<?xml version="1.0"?>
<package>
  <name>tf_topic_tools</name>
  <version>0.0.0</version>
  <description>This package contains utilities to transform a tf frame to a topic and viceversa.</description>
  <maintainer email="Pablo.Quilez.Velilla@ipa.fraunhofer.de">Pablo Quilez</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
